# DRF_Template

./: .dockerignore  .env.sample  .gitignore  .woodpecker.yml  Dockerfile  Pipfile  README.md  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  seed_data.json  start.sh
.bruno/: .env.sample  bruno.json  collection.bru  get-swagger.bru  get_me.bru  get_users.bru  login.bru
.bruno/drf_template/: get-swagger.bru  login.bru
.bruno/drf_template/environments/: drf_template.bru
.bruno/environments/: dev.bru  docker.bru  local.bru
.docker/: start.sh
.woodpecker/: .build.yml  .build_x86.yml  .deploy.yml  .lint.yml  .post_deployment_tests.yml  .pre_deployment_tests.yml  .test.yml  .unit_tests.yml
backend/: schema.yml
backend/accounts/: admin.py  models.py  serializers.py  signals.py  tasks.py  urls.py  validators.py  views.py
backend/api/: urls.py
backend/billing/: apps.py  urls.py  views.py
backend/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/emails/: apps.py  templates.py
backend/notifications/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/payments/: serializers.py  urls.py  views.py
backend/search_results/: admin.py  apps.py  models.py  tasks.py
backend/subscriptions/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/user_groups/: admin.py  apps.py  models.py  serializers.py  signals.py
backend/webdriver/: apps.py  tasks.py  utils.py
scripts/: start.sh
src/accounts/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
src/api/: urls.py
src/config/: __init__.py  models.py
src/core/: asgi.py  settings.py  urls.py  validators.py  wsgi.py
src/core/config/: __init__.py  (+1 more)
src/tests/: debug_auth_middleware.py  debug_request_middleware.py  settings.py
(+19 files in other folders)
